# slang_test

./: Cargo.toml  build.rs  build_shaders.py  shader_compiler.cpp
assets/compiled_shaders/: reflection.json  simple_compute_0.comp  simple_compute_0.spv
assets/shaders/: simple_compute.slang
sc_out/: shader_compiler
src/: main.rs  slang.rs
