[package]
name = "slang_test"
version = "0.1.0"
edition = "2021"
description = "A Bevy application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.14.1", features = ["shader_format_spirv"] }
serde = "1.0.209"
bytemuck = "1.13"
crossbeam-channel = "0.5.14"
serde_json = "1.0"

[build-dependencies]
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
cc = "1.1.23"
